# dib-builder

./: README.md  README.rst  build.py  deploy.py  requirements.txt  setup.cfg
dibt/: dibt.py
