[metadata]
name = dibt
author = Lukas Jelonek
author-email = Lukas.Jelonek@computational.bio.uni-giessen.de
description = A small tool to build cloud images with diskimage-builder, based on a configuration file
description-file = README.rst
project_urls =
    Source Code = https://git.computational.bio.uni-giessen.de/deNBI-Cloud/dib-builder.git
keywords = cloud, image
license = MIT

[files]
packages = dibt

[entry_points]
console_scripts =
    dibt-build = dibt.dibt:build
    dibt-deploy = dibt.dibt:deploy
